added button that links to interactive map and sets the finite fault layer

--- a/src/app/finite-fault/finite-fault/finite-fault.component.html
+++ b/src/app/finite-fault/finite-fault/finite-fault.component.html
@@ -9,7 +9,8 @@
   <div *ngIf="eventService.product$ | async as product; else noProduct">
     <ng-container *ngIf="product | sharedProductContent:'analysis.html'">
       <h3>Scientific Analysis</h3>
-      <shared-text-product [product]="product" [contentPath]="'analysis.html'">
+      <shared-text-product [product]="product"
+        [contentPath]="'analysis.html'">
       </shared-text-product>
     </ng-container>
 
@@ -66,7 +67,8 @@
       2000).
     </p>
 
-    <result-table *ngIf="product | createSegments as segments" [segments]="segments"></result-table>
+    <result-table *ngIf="product | createSegments as segments"
+      [segments]="segments"></result-table>
 
     <h3>Cross-section of Slip Distribution</h3>
     <figure *ngIf="product |
@@ -75,7 +77,8 @@
           :('web/' + product?.properties?.eventsourcecode +
           '_slip2.png')
           as content">
-      <img src="{{ content.url }}" alt="Slip distribution map image" />
+      <img src="{{ content.url }}"
+        alt="Slip distribution map image" />
       <figcaption>
         Cross-section of slip distribution. The strike direction is indicated
         above each fault plane and the hypocenter location is denoted by a
@@ -94,7 +97,8 @@
           :('web/' + product?.properties?.eventsourcecode +
           '_basemap.png')
           as content">
-      <img src="{{ content.url }}" alt="Finite fault basemap" />
+      <img src="{{ content.url }}"
+        alt="Finite fault basemap" />
       <figcaption>
         Surface projection of the slip distribution superimposed on GEBCO
         bathymetry. Thick white lines indicate major plate boundaries [Bird,
@@ -103,12 +107,21 @@
       </figcaption>
     </figure>
 
+    <button mat-raised-button
+      [routerLink]="'../../map'"
+      [queryParams]="{ 'finite-fault-overlay': true,
+          'shakemap-intensity': false,
+          'bounds': product | sharedGetMapBounds }">
+      View finite fault map
+    </button>
+
     <h3>Moment Rate Function</h3>
     <figure *ngIf="product |
         sharedProductContent
           :'moment_rate.png'
           :('web/mr.png') as content; else noMomentRateFunction">
-      <img src="{{ content.url }}" alt="Moment rate function image" />
+      <img src="{{ content.url }}"
+        alt="Moment rate function image" />
       <figcaption>
         Source time function, describing the rate of moment release with time
         after earthquake origin, relative to the peak moment rate (listed in
