switched to use pipe

--- a/src/app/ground-failure/summary/summary.component.html
+++ b/src/app/ground-failure/summary/summary.component.html
@@ -7,17 +7,23 @@
       <ng-container *ngIf="product?.properties; else noLandslideProps">
         <ng-container *ngIf="(product?.properties['landslide-alert'] | lowercase)
           !== 'pending'; else statusPending">
-          <ground-failure-hazard-alert [alert]="product?.properties['landslide-hazard-alert-color']" [type]="'landslide'" [value]="product?.properties['landslide-hazard-alert-value']">
+          <ground-failure-hazard-alert [alert]="product?.properties['landslide-hazard-alert-color']"
+            [type]="'landslide'"
+            [value]="product?.properties['landslide-hazard-alert-value']">
           </ground-failure-hazard-alert>
 
-          <ground-failure-population-alert [alert]="product?.properties['landslide-population-alert-color']" [type]="'landslide'" [value]="product?.properties['landslide-population-alert-value']">
+          <ground-failure-population-alert [alert]="product?.properties['landslide-population-alert-color']"
+            [type]="'landslide'"
+            [value]="product?.properties['landslide-population-alert-value']">
           </ground-failure-population-alert>
         </ng-container>
       </ng-container>
 
 
-      <button mat-raised-button [routerLink]="'../../map'" [queryParams]="{ 'ground-failure-landslide': true,
-              'shakemap-intensity': false, 'bounds': getMapBounds(product) }">
+      <button mat-raised-button
+        [routerLink]="'../../map'"
+        [queryParams]="{ 'ground-failure-landslide': true,
+              'shakemap-intensity': false, 'bounds': product | sharedGetMapBounds }">
         View Landslide Map
       </button>
     </section>
@@ -28,17 +34,22 @@
       <ng-container *ngIf="product?.properties; else noLiquefactionProps">
         <ng-container *ngIf="(product?.properties['liquefaction-alert'] | lowercase)
           !== 'pending'; else statusPending">
-          <ground-failure-hazard-alert [alert]="product?.properties['liquefaction-hazard-alert-color']" [type]="'liquefaction'" [value]="product?.properties['liquefaction-hazard-alert-value']">
+          <ground-failure-hazard-alert [alert]="product?.properties['liquefaction-hazard-alert-color']"
+            [type]="'liquefaction'"
+            [value]="product?.properties['liquefaction-hazard-alert-value']">
           </ground-failure-hazard-alert>
 
-          <ground-failure-population-alert [alert]="product?.properties['liquefaction-population-alert-color']" [type]="'liquefaction'"
+          <ground-failure-population-alert [alert]="product?.properties['liquefaction-population-alert-color']"
+            [type]="'liquefaction'"
             [value]="product?.properties['liquefaction-population-alert-value']">
           </ground-failure-population-alert>
         </ng-container>
       </ng-container>
 
-      <button mat-raised-button [routerLink]="'../../map'" [queryParams]="{ 'ground-failure-liquefaction': true,
-              'shakemap-intensity': false, 'bounds': getMapBounds(product) }">
+      <button mat-raised-button
+        [routerLink]="'../../map'"
+        [queryParams]="{ 'ground-failure-liquefaction': true,
+              'shakemap-intensity': false, 'bounds': product | sharedGetMapBounds }">
         View Liquefaction Map
       </button>
     </section>
