--- a/src/app/shakemap/metadata/processing/processing.component.html
+++ b/src/app/shakemap/metadata/processing/processing.component.html
@@ -183,8 +183,7 @@
     </ng-template>
   </mat-expansion-panel>
 
-  <mat-expansion-panel
-      *ngIf="smProcessing?.shakemap_versions?.map_data_history as history">
+  <mat-expansion-panel *ngIf="smProcessing?.shakemap_versions?.map_data_history as history">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Version History
@@ -228,13 +227,13 @@
           </ng-container>
 
           <ng-container matColumnDef="comment">
-              <mat-header-cell *matHeaderCellDef>
-                Comment
-              </mat-header-cell>
-              <mat-cell *matCellDef="let version">
-                {{ version[3] }}
-              </mat-cell>
-            </ng-container>
+            <mat-header-cell *matHeaderCellDef>
+              Comment
+            </mat-header-cell>
+            <mat-cell *matCellDef="let version">
+              {{ version[3] }}
+            </mat-cell>
+          </ng-container>
 
         </mat-table>
       </div>
