Using new sharedGetMapBounds pipe

--- a/src/app/shakemap/pga/pga.component.html
+++ b/src/app/shakemap/pga/pga.component.html
@@ -15,10 +15,7 @@
         'shakemap-stations']"
         [showScaleControl]="true"
         [showAttributionControl]="false"
-        [bounds]="[[shakemap.properties['maximum-latitude'],
-        shakemap.properties['maximum-longitude']],
-        [shakemap.properties['minimum-latitude'],
-        shakemap.properties['minimum-longitude']]]">
+        [bounds]="shakemap | sharedGetMapBounds">
     </shared-map>
   </a>
 
