--- a/src/app/executive/shakemap-pin/shakemap-pin.component.html
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.html
@@ -17,9 +17,10 @@
     <img src="{{ image.url }}" alt="ShakeMap Intensity Thumbnail" />
     <figcaption>
       <ng-container *ngIf="product | sharedProductProperty:'maxmmi' as mmi">
-        <ng-container *ngIf="getDescription(mmi) as description; else noMMI">
-          Perceived Shaking: {{ description.shaking }}
-          Potential Damage: {{ description.damage }}
+        <ng-container *ngIf="mmi | sharedShakingImpact as impact;
+            else noMMI">
+          Perceived Shaking: {{ impact.shaking }}
+          Potential Damage: {{ impact.damage }}
         </ng-container>
       </ng-container>
     </figcaption>
@@ -27,7 +28,8 @@
 
   <ng-template #noImage>
     <ng-container *ngIf="product | sharedProductProperty:'maxmmi' as mmi">
-      <dl *ngIf="getDescription(mmi) as description; else noMMI">
+      <dl *ngIf="mmi | sharedShakingImpact as impact;
+          else noMMI">
         <dt>Estimated Intensity</dt>
         <dd>
           <shared-mmi
@@ -36,10 +38,10 @@
           </shared-mmi>
         </dd>
         <dt>Perceived Shaking</dt>
-        <dd>{{ description.shaking }}</dd>
+        <dd>{{ impact.shaking }}</dd>
 
         <dt>Potential Damage</dt>
-        <dd>{{ description.damage }}</dd>
+        <dd>{{ impact.damage }}</dd>
       </dl>
     </ng-container>
   </ng-template>
