--- a/src/app/ground-failure/summary/summary-view/summary-view.component.html
+++ b/src/app/ground-failure/summary/summary-view/summary-view.component.html
@@ -1,3 +1,53 @@
-<p>
-  summary-view works!
-</p>
+<section class="summary row">
+  <section class="one-of-two column">
+    <h3>Landslides</h3>
+
+    <ground-failure-type *ngIf="product | pending; else isPending"
+      [hazardAlertColor]="product |
+          sharedProductProperty:'landslide-hazard-alert-color'"
+      [hazardAlertValue]="product |
+          sharedProductProperty:'landslide-hazard-alert-value'"
+      [populationAlertColor]="product |
+          sharedProductProperty:'landslide-population-alert-color'"
+      [populationAlertValue]="product |
+          sharedProductProperty:'landslide-population-alert-value'"
+      [type]="'landslide'">
+    </ground-failure-type>
+
+    <button mat-raised-button
+      [routerLink]="'../../map'"
+      [queryParams]="{ 'ground-failure-landslide': true,
+        'shakemap-intensity': false, 'bounds': product | sharedGetMapBounds }">
+      View Landslides Map
+    </button>
+
+  </section>
+
+  <section class="one-of-two column">
+    <h3>Liquefaction</h3>
+
+    <ground-failure-type *ngIf="product | pending; else isPending"
+      [hazardAlertColor]="product |
+          sharedProductProperty:'liquefaction-hazard-alert-color'"
+      [hazardAlertValue]="product |
+          sharedProductProperty:'liquefaction-hazard-alert-value'"
+      [populationAlertColor]="product |
+          sharedProductProperty:'liquefaction-population-alert-color'"
+      [populationAlertValue]="product |
+          sharedProductProperty:'liquefaction-population-alert-value'"
+      [type]="'liquefaction'">
+    </ground-failure-type>
+
+    <button mat-raised-button
+      [routerLink]="'../../map'"
+      [queryParams]="{ 'ground-failure-liquefaction': true,
+        'shakemap-intensity': false, 'bounds': product | sharedGetMapBounds }">
+      View Liquefaction Map
+    </button>
+
+  </section>
+</section>
+
+<ng-template #isPending>
+  <p class="alert info">Alert Pending</p>
+</ng-template>
