--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "./app/shared/css/contour-overlay.scss";
-@import "./app/shared/css/description-table.scss";
-@import "./app/shared/css/horizontal-scrolling.scss";
-@import "./app/shared/css/mmi-colors.scss";
-@import "./app/shared/css/station-overlay.scss";
+@import './app/shared/css/contour-overlay.scss';
+@import './app/shared/css/description-table.scss';
+@import './app/shared/css/horizontal-scrolling.scss';
+@import './app/shared/css/mmi-colors.scss';
+@import './app/shared/css/station-overlay.scss';
 
 /* Leaflet Styles */
-@import "./app/shared/css/leaflet-styles.scss"; // import before legend-control.scss
-@import "./app/shared/map-control/legend-control.scss";
+@import './app/shared/css/leaflet-styles.scss'; // import before legend-control.scss
+@import './app/shared/map-control/legend-control.scss';
 
 header > h1 {
   margin-bottom: 0;
@@ -43,7 +43,7 @@ mdc-tab-bar-scroller.mdc-tab-bar-scroller {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-@import "~@angular-mdc/theme/material";
+@import '~@angular-mdc/theme/material';
 
 /* allow wrapping on small screens */
 .mat-radio-label-content {
@@ -58,4 +58,10 @@ img {
 
 .sidenav-content {
   overflow: hidden;
+}
+
+mat-cell,
+mat-footer-cell,
+mat-header-cell {
+  padding: 0 1em;
 }
