Show 10km dyfi layer on click

--- a/src/app/dyfi/intensity/intensity.component.html
+++ b/src/app/dyfi/intensity/intensity.component.html
@@ -4,7 +4,7 @@
         dyfi.contents[dyfi.code + '_ciim_geo.jpg'].url; else noImage"
         [routerLink]="'../../map'"
         [queryParams]="{
-          'dyfi-intensity': true,
+          'dyfi-responses-10km': true,
           'shakemap-intensity': false
          }">
     <img 
