working on removing control on mobile

--- a/src/app/shared/map/map.component.html
+++ b/src/app/shared/map/map.component.html
@@ -1,2 +1,5 @@
-<div #mapWrapper class="shared-map" [class.noninteractive]="interactive === false" (mousemove)="$event?.stopPropagation">
+<div #mapWrapper
+  class="shared-map"
+  [class.noninteractive]="interactive === false"
+  (mousemove)="$event?.stopPropagation">
 </div>
