--- a/src/app/shakemap/metadata/output/output.component.scss
+++ b/src/app/shakemap/metadata/output/output.component.scss
@@ -1,3 +1,7 @@
-.gm-table.mat-table {
-  min-width: 700px;
+mat-table.map-information {
+  min-width: 600px;
+}
+
+mat-table.ground-motion-intensity {
+  min-width: 600px;
 }
