--- a/src/app/tell-us/tell-us/tell-us.component.html
+++ b/src/app/tell-us/tell-us/tell-us.component.html
@@ -35,8 +35,8 @@
 </success-view>
 
 <ng-container *ngIf="error">
-  <p class="alert error">
-    Please try to resubmit the form.
-  </p>
-  <pre>{{ error | json }}</pre>
+  <div class="alert error">
+    <p>Please try to resubmit the form.</p>
+    <p>{{ error | json }}</p>
+  </div>
 </ng-container>
